@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-04-26T00:39:39Z",
+  "timestamp" : "2022-04-30T08:09:26Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 18,
-  "uniques" : 13,
+  "count" : 16,
+  "uniques" : 12,
   "clones" : [
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 6, 7 ],
-      "uniques": 5,
+      "count": 5,
+      "count_minmax": [ 5, 7 ],
+      "uniques": 4,
       "uniques_minmax": [ 4, 5 ]
     },
     {
