@@ -1,11 +1,11 @@
 {
-  "count": 18,
+  "count": 16,
   "uniques": 10,
   "clones": [
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 7,
-      "uniques": 5
+      "count": 5,
+      "uniques": 4
     },
     {
       "timestamp": "2022-04-19T00:00:00Z",
